# interpreter-in-go-but-python

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yaml
assets/: lexer.tape  parser.tape
interpret_deez/: ast.py  lexer.py  parser.py  parser_tracing.py  token.py  tokenizer.py
interpret_deez/emulate_repl/: emulate_repl.py
tests/: test_ast.py  test_lexer.py  test_parser.py
