[tool.poetry]
name = "interpreter-in-go-but-python"
version = "1.0.0"
description = "Writing An Interpreter In Go But In Python"
authors = ["Leonardo Tsuda <3965277+ltsuda@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "interpret_deez" }]


[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
ruff = "^0.0.287"
pre-commit = "^3.4.0"
pytest-check = "^2.2.2"
python-defer = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-rP"
